Fix the display of wiki links on narrow devices

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -175,6 +175,7 @@ $banners: (
         background-color: rgba($color, .3);
         padding: 10px;
         border-left: solid 5px $color;
+        display: block;
     }
 }
 
